@@ -1791,6 +1791,8 @@ cl_symbols[] = {
 {EXT_ "READTABLE-LOCK", EXT_ORDINARY, si_readtable_lock, -1, OBJNULL},
 
 {SYS_ "+IO-SYNTAX-PROGV-LIST+", SI_ORDINARY, NULL, -1, OBJNULL},
+{SYS_ "+ECL-SYNTAX-PROGV-LIST+", SI_ORDINARY, NULL, -1, OBJNULL},
+{SYS_ "WITH-ECL-IO-SYNTAX", SI_ORDINARY, NULL, -1, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
