@@ -1791,6 +1791,8 @@ cl_symbols[] = {
 {EXT_ "READTABLE-LOCK","si_readtable_lock"},
 
 {SYS_ "+IO-SYNTAX-PROGV-LIST+",NULL},
+{SYS_ "+ECL-SYNTAX-PROGV-LIST+",NULL},
+{SYS_ "WITH-ECL-IO-SYNTAX",NULL},
 
 /* Tag for end of list */
 {NULL,NULL}};
